# timbro

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
eval/: harness.py  rubric_dashboard.py
paper/: DECISIONS.md  PLAN.md  README.md  lit_review_practitioner.md  literature.md  literature_full.md
paper/analysis/: DEVIATIONS.md
paper/code/ws1/: LEDGER.md  README.md  REPORT.md  _manifest.py  _schema.py  _text.py  build_gos.py  build_human_baseline.py  build_machine_cell.py  build_skill_diffs.py  build_skillssh.py  build_slop.py  dedup.py  merge.py  parse_weekly_installs.py  requirements.txt
paper/code/ws3/: LEDGER.md  LEDGER_LOG.md  README.md  adoption.py  clustering.py  descriptives.py  extract_features.py  extract_features_chains.py  requirements.txt  (+8 more)
paper/data/: corpus.parquet.dvc  dedup_map.parquet.dvc  features.parquet.dvc  features_chains.parquet.dvc  features_human.parquet.dvc  features_machine.parquet.dvc  human_baseline.parquet.dvc  rq1_cluster_assignments.parquet.dvc  rq2_holdout_candidates.parquet.dvc  skill_diffs_chains.parquet.dvc  skillssh_meta.parquet.dvc  skillssh_weekly.parquet.dvc  src_gos.parquet.dvc  src_machine_cell.parquet.dvc  src_skill_diffs.parquet.dvc  src_slop.parquet.dvc  step3_island_dedup.parquet.dvc  step3_machine_projection.parquet.dvc
paper/literature/: citation_mining.md  lit_review_psycholinguistics.md  literature.md  literature_full.md
scripts/: release.sh
skills/timbro/: SKILL.md
src/timbro/: __init__.py  analyze.py  cli.py  core.py  flow.py  mcp_server.py  model.py  profiles.py  report.py  rewrite.py  tells.py  text.py
tests/: test_analyze.py  test_analyze_folk_advice.py  test_leading_words.py  test_markdown_scoring.py  test_preprocess.py  test_profiles.py  test_report_attribution.py  test_report_severity.py  test_rubric_density.py  test_rubric_schimel.py  test_rubric_slop.py  test_runtime_latex.py  test_scoring_policy.py  test_struct_scoring.py  test_tells.py
(+106 files in other folders)
