[project]
name = "timbro"
version = "0.1.0"
description = "Measure the timbre of your writing as a metric space and get an interpretable, content-preserving direction to revise a draft toward your voice."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27.2",
    "numpy>=2.4.6",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.5.1",
    "spacy>=3.8.14",
]

[project.scripts]
timbro-mcp = "timbro.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
