[project]
name = "timbro"
version = "0.3.0"
description = "Measure the timbre of your writing as a metric space and get an interpretable, content-preserving direction to revise a draft toward your voice."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27.2",
    "numpy>=2.4.6",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.5.1",
    "spacy>=3.8.14",
    # spaCy ships POS models out-of-band; pin the wheel so `uv sync` installs it (no manual download).
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[project.scripts]
timbro = "timbro.cli:main"
timbro-mcp = "timbro.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true  # the en_core_web_sm wheel is a direct URL dependency
